--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
   "dependencies": {
     "discord.js": "^14.21.0",
     "dotenv": "^17.0.1"
+  },
+  "devDependencies": {
+    "tsup": "^8.5.0",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3"
   }
 }
