--- a/approved_submissions.json
+++ b/approved_submissions.json
@@ -1,1 +1,222 @@
-[]
+[
+  {
+    "index": 1,
+    "id": "17517998981220000",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "helpp stop speaking. respectfully.",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 2,
+    "id": "17517998981220001",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "i'm calling HR. even tho we don't have one",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 3,
+    "id": "17517998981220002",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "ok but that's lowkey a hate crime",
+    "themes": ["brainrot"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 4,
+    "id": "17517998981220003",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "see this is why i don't go outside",
+    "themes": ["brainrot"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 5,
+    "id": "17517998981220004",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "you say things and expect peace??",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 6,
+    "id": "17517998981220005",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "delete your mouth",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 7,
+    "id": "17517998981220006",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "bro ur brain is just loading screen noises",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 8,
+    "id": "17517998981220007",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "nah that's homophobic",
+    "themes": ["brainrot"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 9,
+    "id": "17517998981220008",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "god gives his worst takes to his loudest clowns",
+    "themes": ["brainrot"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 10,
+    "id": "17517998981220009",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "lmfao ur personality is just 'main character' syndrome",
+    "themes": ["brainrot"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 11,
+    "id": "17517998981220010",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "you need to be studied in a lab",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 12,
+    "id": "17517998981220011",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "ur pronouns are 'not again'",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 13,
+    "id": "17517998981220012",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "ur wifi's faster than your decision making",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 14,
+    "id": "17517998981220013",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "ur brain runs on expired monster energy",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 15,
+    "id": "17517998981220014",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "this feels transphobic but ok",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 16,
+    "id": "17517998981220015",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "how are u real and allowed to speak",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 17,
+    "id": "17517998981220016",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "bold of u to speak w/o a single thought",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 18,
+    "id": "17517998981220017",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "ur brain is just loading screen noises",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 19,
+    "id": "17517998981220018",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "this is giving colonizer energy",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 20,
+    "id": "17517998981220019",
+    "timestamp": "2025-07-06T11:04:58.122Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "my gender just flinched",
+    "themes": ["random"],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-06T11:04:58.122Z"
+  }
+]
