minor update/bugfix
changed ephemeral option to flag, exported theme keywords from
wwydhandler, added ping command

--- a/approved_submissions.json
+++ b/approved_submissions.json
@@ -6,7 +6,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "helpp stop speaking. respectfully.",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -17,7 +19,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "i'm calling HR. even tho we don't have one",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -28,7 +32,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "ok but that's lowkey a hate crime",
-    "themes": ["brainrot"],
+    "themes": [
+      "brainrot"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -39,7 +45,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "see this is why i don't go outside",
-    "themes": ["brainrot"],
+    "themes": [
+      "brainrot"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -50,7 +58,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "you say things and expect peace??",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -61,7 +71,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "delete your mouth",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -72,7 +84,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "bro ur brain is just loading screen noises",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -83,7 +97,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "nah that's homophobic",
-    "themes": ["brainrot"],
+    "themes": [
+      "brainrot"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -94,7 +110,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "god gives his worst takes to his loudest clowns",
-    "themes": ["brainrot"],
+    "themes": [
+      "brainrot"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -105,7 +123,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "lmfao ur personality is just 'main character' syndrome",
-    "themes": ["brainrot"],
+    "themes": [
+      "brainrot"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -116,7 +136,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "you need to be studied in a lab",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -127,7 +149,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "ur pronouns are 'not again'",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -138,7 +162,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "ur wifi's faster than your decision making",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -149,7 +175,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "ur brain runs on expired monster energy",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -160,7 +188,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "this feels transphobic but ok",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -171,7 +201,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "how are u real and allowed to speak",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -182,7 +214,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "bold of u to speak w/o a single thought",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -193,7 +227,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "ur brain is just loading screen noises",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -204,7 +240,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "this is giving colonizer energy",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -215,7 +253,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "my gender just flinched",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   }
