fixed 25 limit.. added role capacity

--- a/approved_submissions.json
+++ b/approved_submissions.json
@@ -6,7 +6,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "helpp stop speaking. respectfully.",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -17,7 +19,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "i'm calling HR. even tho we don't have one",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -28,7 +32,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "ok but that's lowkey a hate crime",
-    "themes": ["brainrot"],
+    "themes": [
+      "brainrot"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -39,7 +45,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "see this is why i don't go outside",
-    "themes": ["brainrot"],
+    "themes": [
+      "brainrot"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -50,7 +58,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "you say things and expect peace??",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -61,7 +71,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "delete your mouth",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -72,7 +84,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "bro ur brain is just loading screen noises",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -83,7 +97,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "nah that's homophobic",
-    "themes": ["brainrot"],
+    "themes": [
+      "brainrot"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -94,7 +110,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "god gives his worst takes to his loudest clowns",
-    "themes": ["brainrot"],
+    "themes": [
+      "brainrot"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -105,7 +123,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "lmfao ur personality is just 'main character' syndrome",
-    "themes": ["brainrot"],
+    "themes": [
+      "brainrot"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -116,7 +136,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "you need to be studied in a lab",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -127,7 +149,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "ur pronouns are 'not again'",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -138,7 +162,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "ur wifi's faster than your decision making",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -149,7 +175,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "ur brain runs on expired monster energy",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -160,7 +188,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "this feels transphobic but ok",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -171,7 +201,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "how are u real and allowed to speak",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -182,7 +214,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "bold of u to speak w/o a single thought",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -193,7 +227,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "ur brain is just loading screen noises",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -204,7 +240,9 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "this is giving colonizer energy",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
   },
@@ -215,8 +253,259 @@
     "userId": "1140844731555909773",
     "username": "anika.luv",
     "submission": "my gender just flinched",
-    "themes": ["random"],
+    "themes": [
+      "random"
+    ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-06T11:04:58.122Z"
+  },
+  {
+    "index": 21,
+    "id": "1751915244946",
+    "timestamp": "2025-07-07T19:07:24.946Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "...This is worse than Jojo Siwa being straight.",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "917242325216940102",
+    "approvedAt": "2025-07-07T19:07:24.946Z"
+  },
+  {
+    "index": 22,
+    "id": "1751916582198",
+    "timestamp": "2025-07-07T19:29:42.198Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "Can you maybe, I don't know, SHUT THE FUCK UP?",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T19:29:42.198Z"
+  },
+  {
+    "index": 22,
+    "id": "1751916585561",
+    "timestamp": "2025-07-07T19:29:45.561Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "Me personally, I'd gamble all of my future kid's college savings.",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T19:29:45.561Z"
+  },
+  {
+    "index": 22,
+    "id": "1751916589083",
+    "timestamp": "2025-07-07T19:29:49.083Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "Just by looking at you, I'd get plastic and surgery and run away. 💀",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T19:29:49.084Z"
+  },
+  {
+    "index": 22,
+    "id": "1751916592070",
+    "timestamp": "2025-07-07T19:29:52.070Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "What would YOU do if you just never talked again?",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T19:29:52.070Z"
+  },
+  {
+    "index": 22,
+    "id": "1751916602058",
+    "timestamp": "2025-07-07T19:30:02.058Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "If I was your dad, I'd leave you right away.",
+    "themes": [
+      "family"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T19:30:02.058Z"
+  },
+  {
+    "index": 22,
+    "id": "1751916608477",
+    "timestamp": "2025-07-07T19:30:08.477Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "Is it too late to snap myself? 🖍️",
+    "themes": [
+      "brainrot"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T19:30:08.477Z"
+  },
+  {
+    "index": 22,
+    "id": "1751916618507",
+    "timestamp": "2025-07-07T19:30:18.507Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "You're somehow more cringe than the VIPs in Squid Game season 3....",
+    "themes": [
+      "sigma",
+      "gaming",
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T19:30:18.507Z"
+  },
+  {
+    "index": 22,
+    "id": "1751916625191",
+    "timestamp": "2025-07-07T19:30:25.191Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "i'm crine what is this",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T19:30:25.191Z"
+  },
+  {
+    "index": 23,
+    "id": "1751917650550",
+    "timestamp": "2025-07-07T19:47:30.550Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "Honestly, for once, and one time only, I'd be proud of you.",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "917242325216940102",
+    "approvedAt": "2025-07-07T19:47:30.550Z"
+  },
+  {
+    "index": 23,
+    "id": "1751917652547",
+    "timestamp": "2025-07-07T19:47:32.547Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "this is why im homophobic....",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "917242325216940102",
+    "approvedAt": "2025-07-07T19:47:32.547Z"
+  },
+  {
+    "index": 24,
+    "id": "1751917797663",
+    "timestamp": "2025-07-07T19:49:57.663Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "SHUT UP QUEER",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T19:49:57.663Z"
+  },
+  {
+    "index": 25,
+    "id": "1751917814787",
+    "timestamp": "2025-07-07T19:50:14.787Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "If this was the 1800s...... if only this was the 1800s......",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T19:50:14.787Z"
+  },
+  {
+    "index": 26,
+    "id": "1751918068917",
+    "timestamp": "2025-07-07T19:54:28.917Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "I'd probably think that your IQ is higher than Kaido's for once!",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T19:54:28.917Z"
+  },
+  {
+    "index": 27,
+    "id": "1751918071078",
+    "timestamp": "2025-07-07T19:54:31.078Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "You should've just been left in the sock atp.",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T19:54:31.078Z"
+  },
+  {
+    "index": 28,
+    "id": "1751918916871",
+    "timestamp": "2025-07-07T20:08:36.871Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "fucking end myself",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T20:08:36.871Z"
+  },
+  {
+    "index": 29,
+    "id": "1751918965286",
+    "timestamp": "2025-07-07T20:09:25.286Z",
+    "userId": "1140844731555909773",
+    "username": "anika.luv",
+    "submission": "fuck you in the ass",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T20:09:25.286Z"
+  },
+  {
+    "index": 30,
+    "id": "1751918998134",
+    "timestamp": "2025-07-07T20:09:58.134Z",
+    "userId": "917242325216940102",
+    "username": "awawablah",
+    "submission": "blow my head smoove off",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "917242325216940102",
+    "approvedAt": "2025-07-07T20:09:58.134Z"
+  },
+  {
+    "index": 31,
+    "id": "1751919148562",
+    "timestamp": "2025-07-07T20:12:28.562Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "put you on the sidewalk and disown you",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T20:12:28.562Z"
   }
 ]
