--- a/approved_submissions.json
+++ b/approved_submissions.json
@@ -507,5 +507,83 @@
     ],
     "approvedBy": "1140844731555909773",
     "approvedAt": "2025-07-07T20:12:28.562Z"
+  },
+  {
+    "index": 32,
+    "id": "1751922633962",
+    "timestamp": "2025-07-07T21:10:33.962Z",
+    "userId": "1156278805221085204",
+    "username": "wearethefavors",
+    "submission": "I will dropkick you, AND THEN hit you with galvanized square steel, AND THEN send you to Missisippi... heh, cus you're the only miss whose piss I'd sippy... 🤤",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T21:10:33.962Z"
+  },
+  {
+    "index": 33,
+    "id": "1751923403174",
+    "timestamp": "2025-07-07T21:23:23.174Z",
+    "userId": "917242325216940102",
+    "username": "awawablah",
+    "submission": "none of these words are in the bible",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T21:23:23.174Z"
+  },
+  {
+    "index": 33,
+    "id": "1751923403351",
+    "timestamp": "2025-07-07T21:23:23.351Z",
+    "userId": "917242325216940102",
+    "username": "awawablah",
+    "submission": "none of these words are in the bible",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "917242325216940102",
+    "approvedAt": "2025-07-07T21:23:23.351Z"
+  },
+  {
+    "index": 34,
+    "id": "1751923472074",
+    "timestamp": "2025-07-07T21:24:32.074Z",
+    "userId": "1345991001319149589",
+    "username": "rivers.87",
+    "submission": "You could hear a pin drop from how empty your head is",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "917242325216940102",
+    "approvedAt": "2025-07-07T21:24:32.074Z"
+  },
+  {
+    "index": 35,
+    "id": "1751924864937",
+    "timestamp": "2025-07-07T21:47:44.937Z",
+    "userId": "917242325216940102",
+    "username": "awawablah",
+    "submission": "id recommend a therapist",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T21:47:44.937Z"
+  },
+  {
+    "index": 35,
+    "id": "1751924868078",
+    "timestamp": "2025-07-07T21:47:48.078Z",
+    "userId": "917242325216940102",
+    "username": "awawablah",
+    "submission": "move to alaska",
+    "themes": [
+      "random"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-07T21:47:48.078Z"
   }
 ]
