--- a/approved_submissions.json
+++ b/approved_submissions.json
@@ -886,5 +886,20 @@
     ],
     "approvedBy": "1156278805221085204",
     "approvedAt": "2025-07-09T17:55:26.092Z"
+  },
+  {
+    "index": 59,
+    "id": "1752086124463",
+    "timestamp": "2025-07-09T18:35:24.463Z",
+    "userId": "765210661776392212",
+    "username": "strangertobe",
+    "submission": "this is just like that time on family guy",
+    "themes": [
+      "tiktok",
+      "family",
+      "romance"
+    ],
+    "approvedBy": "1140844731555909773",
+    "approvedAt": "2025-07-09T18:35:24.463Z"
   }
 ]
