final commit for v1

--- a/src/config.json
+++ b/src/config.json
@@ -21,5 +21,6 @@
       "what ya do"
     ]
   },
-  "approvedSubmissionRoleId": "1392542542146568253"
+  "approvedSubmissionRoleId": "1392542542146568253",
+  "moderationLogChannelId": "1391673514355986573"
 }
